Cleanup ExtensionConfiguration.